fix styles PotentialEmployeesPageCard.css: delete flex-wrapp, add flex-column

--- a/frontend/src/widgets/PotentialEmployeesPageCardsBlock/ui/PotentialEmployeesPageCard.css
+++ b/frontend/src/widgets/PotentialEmployeesPageCardsBlock/ui/PotentialEmployeesPageCard.css
@@ -17,7 +17,7 @@
 
 .PotentialEmployeesPageCard__content {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   gap: 28px;
   margin-bottom: 40px;
   flex-grow: 1; /* Make the content area grow to fill space */
@@ -25,7 +25,6 @@
 
 .PotentialEmployeesPageCard__info {
   display: flex;
-  justify-content: center;
   flex-direction: column;
   gap: 30px;
   flex-grow: 1; /* Make the info area grow to fill space */
@@ -54,6 +53,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  flex-shrink: 0;
 }
 
 .PotentialEmployeesPageCard__row {
